<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/layer_type_normal"
            android:title="@string/layer_type_normal"
            android:checkable="true" />
        <item
            android:id="@+id/layer_type_satellite"
            android:title="@string/layer_type_satellite"
            android:checkable="true" />
        <item
            android:id="@+id/layer_type_terrain"
            android:title="@string/layer_type_terrain"
            android:checkable="true" />
        <item
            android:id="@+id/layer_type_hybrid"
            android:title="@string/layer_type_hybrid"
            android:checkable="true" />
    </group>

    <item
        android:id="@+id/layer_traffic"
        android:title="@string/layer_traffic"
        android:checkable="true" />

</menu>
